fix css spacing (#2)

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,13 +14,20 @@ body {
 	background-color: #222;
 	color: #ddd;
 	font-family: Arial, Helvetica, sans-serif;
+	position: absolute;
+	top: 1vh;
+	bottom: 0;
+}
+
+h2, p {
+	margin-block-start: 0.25em;
+	margin-block-end: 0.25em;
 }
 
 .body-wrapper {
 	display: flex;
 	flex-flow: column nowrap;
-	justify-content: center;
-	padding: 0 15vw;
+	justify-content: space-around;
 	height: 100%;
 	position: absolute;
 	top: 0;
@@ -29,7 +36,6 @@ body {
 
 .avatar-wrapper {
 	text-align: center;
-	margin-top: -4vh;
 }
 
 .avatar-wrapper-landscape {
@@ -138,7 +144,7 @@ a:visited {
 
 .shop-wrapper {
 	background-color: #2B2B2B;
-	margin-top: 30px;
+	margin-top: 0.5em;
 }
 
 .header {
